--- a/public/html/pac-man.html
+++ b/public/html/pac-man.html
@@ -154,7 +154,7 @@
     <script src="/javascript/PacMan.js"></script>
     <script src="/javascript/Game.js"></script>
     <script src="/javascript/game-over.js"></script>
-    <script src="/javascript/demo-loop.js"></script>
+    <!-- <script src="/javascript/demo-loop.js"></script> -->
 
     <script type="text/template" id="match-result-item-template">
         <h3>vs {{opponentName}}</h3>
