Worked on the game

--- a/public/html/pac-man.html
+++ b/public/html/pac-man.html
@@ -16,6 +16,7 @@
     <!-- <div id="splash-screen">
 
     </div> -->
+
     <h1 class="countdown-text" id="count-3">3</h1>
     <h1 class="countdown-text" id="count-2">2</h1>
     <h1 class="countdown-text" id="count-1">1</h1>
@@ -92,10 +93,13 @@
             <canvas id="gameCanvas"></canvas>
         </div>
         <div>
+                <h1 class="countdown-text1" id="v-v"></h1>
             <div id="time-box">
                 <h3>Time Remaining</h3>
                 <h1 id="time-remaining"></h1>
             </div>
+
+            <h1 id="game-message">Message</h1>
         </div>
     </div>
 
