--- a/public/html/pac-man.html
+++ b/public/html/pac-man.html
@@ -37,11 +37,20 @@
 
 
 
-            <div class="data-label">Your Name</div>
+            <div class="flex-container">
+                <div class="flex-none">
+                        <div class="data-label">Your Name</div>
+                </div>
+                <div style="padding-left: 30px; text-align: left">
+                        <div id="error-message"></div>
+                </div>
+            </div>
 
-            <input type="text" id="user-name"><br>
+
+            <input type="text"  id="user-name"><br>
 
             <button id="register-button" class="myButton">Register</button>
+
 
 
         </div>
